--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,3 +3,6 @@ logfile=/var/log/supervisord.log
 
 [program:skypebot]
 command=/usr/bin/php dbus-monitor.php
+
+[program:webserver]
+command=/usr/bin/php -S 0.0.0.0:9001
