--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,6 +3,8 @@ logfile=/var/log/supervisord.log
 
 [program:skypebot]
 command=/usr/bin/php dbus-monitor.php
+autorestart=true
 
 [program:webserver]
 command=/usr/bin/php -S 0.0.0.0:9001
+autorestart=true
