--- a/tools/vagrant/Vagrantfile
+++ b/tools/vagrant/Vagrantfile
@@ -18,15 +18,14 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     vb.gui = true
   end
 
-  # config.vm.provision :chef_solo do |chef|
-  #   chef.cookbooks_path = "../my-recipes/cookbooks"
-  #   chef.roles_path = "../my-recipes/roles"
-  #   chef.data_bags_path = "../my-recipes/data_bags"
-  #   chef.add_recipe "mysql"
-  #   chef.add_role "web"
-  #
-  #   # You may also specify custom JSON attributes:
-  #   chef.json = { :mysql_password => "foo" }
-  # end
+  config.vm.provision :chef_solo do |chef|
+    chef.cookbooks_path = ["../chef/cookbooks", "../chef/app-cookbooks"]
+    chef.roles_path = ["../chef/roles", "../chef/app-roles"]
+    chef.add_recipe "ubuntu-config"
+    chef.add_recipe "apt"
+    chef.add_recipe "php"
+    chef.add_recipe "skype"
+ 
+  end
 
 end
