Add dbus installation

--- a/tools/vagrant/Vagrantfile
+++ b/tools/vagrant/Vagrantfile
@@ -25,7 +25,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     chef.add_recipe "apt"
     chef.add_recipe "php"
     chef.add_recipe "skype"
- 
+    chef.add_recipe "skype::dbus"
   end
 
 end
