--- a/tools/vagrant/Vagrantfile
+++ b/tools/vagrant/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.network :private_network, ip: vm_ip
 
-  config.vm.synced_folder "../..", "/mnt/skypebot"
+  config.vm.synced_folder "../..", "/home/vagrant/skypebot"
 
   config.vm.provider :virtualbox do |vb|
     vb.gui = true
