--- a/tools/vagrant/Vagrantfile
+++ b/tools/vagrant/Vagrantfile
@@ -7,8 +7,8 @@ vm_ip = "192.168.79.229"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
-  config.vm.box = "skypebot-ubuntu-quantal64"
-  config.vm.box_url = "http://ib-vagrant-vms.s3.amazonaws.com/skypebot-ubuntu-quantal64.box"
+  config.vm.box = "Ubuntu-12.10-x86_64-Desktop-minimal-0.1.0"
+  config.vm.box_url = "http://ib-vagrant-vms.s3.amazonaws.com/Ubuntu-12.10-x86_64-Desktop-minimal-0.1.0.box"
 
   config.vm.network :private_network, ip: vm_ip
 
@@ -26,6 +26,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     chef.add_recipe "php"
     chef.add_recipe "skype"
     chef.add_recipe "skype::dbus"
+    chef.add_recipe "ubuntu-config::launcher"
   end
 
 end
