--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
         "php": ">=5.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "3.7.*",
+        "phpspec/phpspec": "2.0.*@dev"
     },
     "autoload": {
         "psr-0": {
