--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: php
+
 php:
   - "5.5"
   - "5.4"
+
 before_script: composer install --dev
-script: bin/phpunit
+
+script:
+  - bin/phpunit
+  - bin/phpspec run
