Add composer metadata

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,19 @@
 {
+    "name": "inviqa/skypebot",
+    "description": "PHP driven bot for Skype  DBus interactions",
+    "keywords":  ["skype", "dbus", "inviqa", "php"],
+    "type": "project",
+    "license": "Apache-2.0",
+    "authors": [
+        {
+            "name": "Ben Longden",
+            "email": "blongden@inviqa.com"
+        },
+        {
+            "name": "Shane Auckland",
+            "email": "sauckland@inviqa.com"
+        }
+    ],
     "require": {
         "php": ">=5.4"
     },
