--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "php": ">=5.4"
     },
     "require-dev": {
-        "phpspec/phpspec": "2.0.*@dev"
+        "phpspec/phpspec": "2.0.*@dev",
+        "squizlabs/php_codesniffer": "1.5.*"
     },
     "autoload": {
         "psr-0": {
