--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,5 +6,5 @@ command=/usr/bin/php dbus-monitor.php
 autorestart=true
 
 [program:webserver]
-command=/usr/bin/php -S 0.0.0.0:9001
+command=/usr/bin/php -S 0.0.0.0:9001 -t public/
 autorestart=true
