Add tools to scrutinizer

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,2 +1,11 @@
-filter:
-    paths: [src/*, public/*]
+imports:
+    - php
+
+tools:
+  php_code_sniffer:
+    filter:
+      paths: [ src/*, public/* ]
+
+  php_analyzer:
+    filter:
+      paths: [ src/*, public/* ]
